--- a/techmart/src/App.css
+++ b/techmart/src/App.css
@@ -40,3 +40,38 @@
 h1{
   font-display: center;
 }
+.nav{
+  width: 100%;
+  background-color:rgb(228, 224, 224);
+  height: 100px;
+}
+
+li{
+  text-transform: uppercase;
+  text-decoration: none;
+  float: right;
+  display:flex;
+  flex-direction: row;
+  margin: 30px;
+  font-size: 20px;
+  text-align:center;
+  margin-top: 35px;
+  font-family: Arial, sans-serif;
+}
+
+.logo{
+  font-size: 60px;
+}
+
+.nav #search{
+  /* float: right; */
+  padding: 6px;
+  border: none;
+  margin-top: 2px;
+  margin-left: 480px;
+  font-size: 30px;
+  width: 500px;
+  height: 40px;
+  border-radius: 2rem;
+
+}
