--- a/techmart/src/index.css
+++ b/techmart/src/index.css
@@ -1,3 +1,4 @@
+/* Reset Styles */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,96 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Footer Styles */
+footer {
+  background-color: #333;
+  padding: 30px 0;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  max-height: 190%;
+
+}
+
+.footer-column {
+  flex-basis: calc(25% - 20px);
+  margin-bottom: 20px;
+}
+
+.footer-column h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.footer-column p,
+.footer-column ul {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.footer-column ul li {
+  list-style: none;
+  margin-bottom: 5px;
+}
+
+.footer-column ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-column ul li a:hover {
+  text-decoration: underline;
+}
+
+/* Social Media Links */
+.social-media-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.social-media-links li {
+  margin: 0 10px;
+}
+
+.social-media-links a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #333;
+  text-align: center;
+  line-height: 30px;
+  transition: all 0.3s ease;
+}
+
+.social-media-links a:hover {
+  background-color: #ccc;
+}
+
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.col-sm {
+  color: white;
+  text-align: center;
+  border-top: 1px solid white;
 }
