--- a/techmart/src/App.css
+++ b/techmart/src/App.css
@@ -60,7 +60,7 @@ li{
 }
 
 .logo{
-  font-size: 60px;
+  font-size: 50px;
 }
 
 .nav #search{
@@ -68,10 +68,44 @@ li{
   padding: 6px;
   border: none;
   margin-top: 2px;
-  margin-left: 480px;
+  margin-left: 15%;
   font-size: 30px;
-  width: 500px;
+  width: 450px;
   height: 40px;
   border-radius: 2rem;
 
+}
+
+.comp{
+  text-align: center;
+  color: black;
+}
+
+.electrons {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin: 10px;
+  width: 300px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+}
+.electrons img {
+  max-width: 100%;
+  height:350px;
+  margin-bottom: 10px;
+}
+.electrons button {
+  margin-top: 10px;
+  background-color: #008CBA;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+  cursor: pointer;
+}
+.electrons button:hover {
+  background-color: #4CA724;
 }
