--- a/techmart/src/App.css
+++ b/techmart/src/App.css
@@ -83,7 +83,7 @@ li{
   padding: 50px 80px;
   background-color: #333;
   color: #fff;
-  margin-top: 10000px;
+  margin-top: 1000px;
 }
 
 /* Footer Column */
@@ -170,4 +170,53 @@ a:hover {
   margin-top: 100%;
 }
 
+.banner-card {
+  background-color: rgb(255, 60, 0);
+  color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 100px;
+}
 
+.banner-card-header {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.banner-card-paragraph {
+  font-size: 16px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.banner-card-buttons-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.banner-card-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.banner-card-buttons button {
+  background-color: white;
+  color: orange;
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.banner-card-buttons button:hover {
+  background-color: burlywood;
+  color: grey;
+}
