--- a/techmart/src/App.css
+++ b/techmart/src/App.css
@@ -91,7 +91,7 @@ li{
   display: inline-block;
   vertical-align: top;
   text-align: center;
-  height:680px;
+  height:600px;
 }
 .electrons img {
   max-width: 100%;
@@ -260,4 +260,112 @@ a:hover {
 .banner-card-buttons button:hover {
   background-color: burlywood;
   color: grey;
+}
+
+*{
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+@font-face {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: italic;
+  font-display: swap;
+  src: url(https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200..900&display=swap);
+}
+
+.page {
+  height:100vh;
+  width: 100%;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
+.cover {
+  background-color: rgb(105, 110, 110);
+  width: 30em;
+  height:35em;
+  position:relative;
+  border-radius: 1em;
+  box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-left: 40%;
+  
+
+}
+.alt-login {
+  width: 80%;
+  height: 3em;
+  display: flex;
+  justify-content: center;
+}
+
+.alt-login div {
+  width: 45%;
+  height: 100%;
+  border-radius: 0.25em;
+  background-color:gray;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+.google {
+  background-image: url(https://shorturl.at/ekEMT);}
+.Facebook {
+      background-image: url(https://shorturl.at/jnoKV);}
+
+input {
+  border: none;
+  background-color: aliceblue;
+  height: 4em;
+  width: 80%;
+  border-radius: 0.25em;
+  text-align: center;
+  padding: 2em;
+}
+input:focus {
+  outline-color: aquamarine;
+}
+.login-btn {
+  width: 40%;
+  height: 3em;background-color: aquamarine;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 0.25em;
+  cursor: pointer;
+}
+
+.login-btn:hover { transform: scale(1.25);}
+
+.text {
+  position: relative;
+  bottom: 2em;
+}
+
+.hide {
+  position: absolute;
+  transform:scale(0);
+
+}
+
+.login-popup {
+  position: relative;
+  height: 30em;
+  width: 30em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.25em;
+  background-color: black;
+  color: greenyellow;
+  bottom: 0;
+  transform:scale(1);
+  transition: 1.5s;
+
 }
