added a landing feature

--- a/techmart/src/App.css
+++ b/techmart/src/App.css
@@ -370,3 +370,52 @@ input:focus {
   transition: 1.5s;
 
 }
+/* .slider {
+  margin-top: 50px;
+}
+.slider img {
+  width: 100%;
+} */
+
+/*  order */
+.order {
+  margin-top: 100px;
+}
+.order .container {
+  padding: 30px 10px;
+  background: #e4e1e1;
+  height:200px;
+  
+}
+.order .num h1 {
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  border-radius: 50%;
+  background: #feeec8;
+  text-align: center;
+  margin-right: 40px;
+}
+.order h3 {
+  font-weight: 600;
+  line-height: 90px;
+  /* margin-bottom: 10px; */
+}
+.order p {
+  font-size: 17px;
+  /* line-height: 65px; */
+}
+.order .box:nth-child(2) h1 {
+  background: #ceeffe;
+}
+.order .box:nth-child(3) h1 {
+  background: #d4f8c4;
+}
+.order .box:nth-child(4) h1 {
+  background: #d8dafe;
+}
+
+.order .box,p{
+  display: inline-flex;
+  display-direction: row;
+}
